--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
+    "he": "^1.2.0",
     "next": "14.1.0",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
@@ -21,9 +22,11 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/he": "^1.2.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ungap__structured-clone": "^1.2.0",
     "@types/uuid": "^9.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
